<resources>
    <string name="app_name">PaajeeBakers</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_btn">Login</string>
    <string name="login_register">Don\'t have an account? Register here!</string>
    <string name="login_forgotten_pasword">Forgot your password?</string>
    <string name="register_btn">Sign Up</string>
    <string name="forgot_password_btn">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--string drawer menu-->
    <string name="menu_title">Categories</string>
    <string name="menu_location">Location</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_account">Account</string>

    <string name="menu_cat1">Savoury</string>
    <string name="menu_cat2">Pastries</string>
    <string name="menu_cat3">Cakes</string>
    <string name="menu_cat4">Biscuits</string>

    <string name="menu_signOut">Sign Out</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="about_text">PaajeeBakers created by Basim Hassan Mehdi, 2018</string>

    <!--exit notification-->
    <string name="press_again_exit_app">Press again to exit</string>

    <!--Google Pay-->
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
</resources>