<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:checked="true"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_cart"
            app:actionLayout="@layout/menu_counter" />

    </group>

    <item android:title="@string/menu_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_cat1"

                    android:title="@string/menu_cat1" />
                <item
                    android:id="@+id/nav_cat2"

                    android:title="@string/menu_cat2" />
                <item
                    android:id="@+id/nav_cat3"

                    android:title="@string/menu_cat3" />
                <item
                    android:id="@+id/nav_cat4"

                    android:title="@string/menu_cat4" />
            </group>
        </menu>
    </item>

</menu>