<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".view.Register">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/pjb_logo" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@android:color/background_light">

        <AutoCompleteTextView
            android:id="@+id/register_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/fredoka_one"
            android:hint="@string/username_hint"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@android:color/background_light">

        <AutoCompleteTextView
            android:id="@+id/register_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/fredoka_one"
            android:hint="@string/email_hint"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@android:color/background_light">

    <EditText
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/fredoka_one"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@android:color/background_light">

    <EditText
            android:id="@+id/register_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/fredoka_one"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:fontFamily="@font/fredoka_one"
            android:onClick="signUp"
            android:padding="12dp"
            android:text="@string/register_btn" />

    </RelativeLayout>
</LinearLayout>
